<resources>
    <string name="app_name">FestivityModule</string>
    <string name="festivity_inveite">邀请有礼</string>
    <string name="festivity_invite_income">您赚取的佣金(元)</string>
    <string name="festivity_invite_wechat">邀请微信好友</string>
    <string name="festivity_invite_qrcode">当面二维码邀请</string>
    <string name="festivity_invite_ad_big">邀请好友 赚取佣金</string>
    <string name="festivity_invite_ad">更快 · 更好 · 更懂你</string>
    <string name="festivity_invite_rule">邀请规则</string>
    <string name="festivity_invite_share_title">泓牛供应链:好友喊你一起挣佣金</string>
    <string name="festivity_invite_share_des">快速下订单，安心购保险，随时看轨迹</string>
</resources>
